Add Deprecation annotations, issue #49